# generic-btree

./: Cargo.toml  README.md  test.dot  test0.dot
src/: btree.rs  dot.rs  lib.rs  map.rs  slab.rs  util.rs
src/btree/: entry.rs  ext.rs  iter.rs  node.rs
src/btree/node/: addr.rs  balance.rs  buffer.rs  internal.rs  item.rs  leaf.rs  offset.rs
src/btree/node/buffer/: internal.rs  leaf.rs
src/map/: binding.rs  entry.rs
src/slab/: item.rs  node.rs
src/slab/node/: internal.rs  leaf.rs
tests/: basic.rs  iter.rs
