[package]
name = "generic-btree"
version = "0.1.0"
edition = "2018"

[features]
default = ["dot", "slab"]
dot = []

[dependencies]
cc-traits = { version = "^0.4", features = ["nightly", "slab"] }
slab = { version = "0.4", optional = true }

# staticvec = "^0.10.8"
smallvec = "1.6"

[dev-dependencies]
rand = { version = "^0.7", features = ["small_rng"] }